--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap");
 * {
-  background-color: #596478;
   max-width: 1440px;
   color: white;
   font-size: 14px;
+}
+
+body {
+  background-color: #1c2431;
+  background-image: url("../images/bg-curvy-desktop.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+h2 {
+  font-size: 1.2rem;
 }
 
 header {
@@ -87,6 +99,28 @@ header a {
 .options-block {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 70%;
+  margin: 0 auto;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.options-container {
+  width: 30%;
+  min-width: 200px;
+  margin: 20px;
+}
+
+.options-container img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 15%;
+}
+
+.options-container p, .options-container h2 {
+  text-align: center;
 }
 
 .flexbox-center {
