--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -13,6 +13,11 @@ body{
     background-attachment: fixed;
     background-size: cover;
 }
+h1 {
+    font-family: Raleway;
+    font-size: 1.5rem;
+    text-align: center;
+}
 
 h2{
     font-size: 1.2rem;
