--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,12 @@ body {
   background-size: cover;
 }
 
+h1 {
+  font-family: Raleway;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 h2 {
   font-size: 1.2rem;
 }
@@ -70,8 +76,6 @@ header a {
 }
 
 .get-started-block h1 {
-  font-size: 1.5rem;
-  text-align: center;
   max-width: 400px;
 }
 
@@ -121,6 +125,38 @@ header a {
 
 .options-container p, .options-container h2 {
   text-align: center;
+}
+
+.stay-produktiv {
+  max-width: 80%;
+  margin: 0 auto;
+  margin-top: 5%;
+  -ms-flex-pack: distribute !important;
+      justify-content: space-around !important;
+}
+
+.stay-produktiv img {
+  max-width: 300px;
+}
+
+.stay-produktiv h1 {
+  text-align: start;
+  width: 40%;
+}
+
+.stay-produktiv a {
+  text-decoration: underline;
+  color: #65e2d9;
+}
+
+.stay-produktiv .stay-produktiv_text {
+  max-width: 40%;
+}
+
+.stay-produktiv .stay-produktive_link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .flexbox-center {
