--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -6,12 +6,11 @@
 }
 
 body{
-    background-color: hsl(217, 28%, 15%);
     background-image: url("../images/bg-curvy-desktop.svg");
-    background-position: center center;
+    background-color: hsl(217, 28%, 15%);
+    background-position: center 30%;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    background-size: 130% auto;
 }
 h1 {
     font-family: Raleway;
