--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -62,8 +62,7 @@ header {
     flex-wrap: wrap;
     width: 70%;
     margin: 0 auto;
-    align-items: flex-start;
-}
+    align-items: flex-start;}
 
 .options-container{
     width: 30%;
