--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -22,6 +22,11 @@ h2{
     font-size: 1.2rem;
 }
 
+h3{
+    font-family: Raleway;
+    font-size: 1rem;
+}
+
 //Fonts
 //font-family: 'Open Sans', sans-serif; 
 //font-family: 'Raleway', sans-serif;
