--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -62,21 +62,22 @@ header {
     flex-wrap: wrap;
     width: 70%;
     margin: 0 auto;
-    align-items: flex-start;}
+    align-items: flex-start;
 
-.options-container{
-    width: 30%;
-    min-width: 200px;
-    margin: 20px;
-    img{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        min-width: 15%;
-    }
-    p, h2{
-      text-align: center;
-    }
+  .options-container{
+      width: 30%;
+      min-width: 200px;
+      margin: 20px;
+      img{
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          min-width: 15%;
+      }
+      p, h2{
+        text-align: center;
+      }
+  }
 }
 
 .stay-produktiv {
@@ -102,6 +103,43 @@ header {
       display: flex;
     }
 
+}
+
+.testimonial-block{
+  max-width: 80%;
+  justify-content: space-around !important;
+  margin: 0 auto;
+  margin-top: 5%;
+
+  .testimonial {
+    flex-wrap: wrap;
+    max-width: 25%;
+    background-color: hsl(219, 30%, 18%);
+    padding: 2%;
+    justify-content: left;
+
+    p{
+      margin: 0 auto;
+      margin-bottom: 5px;
+    }
+    h3{
+      margin: 0;
+    }
+  }
+
+  .testimonial-person{
+    justify-content: left !important;
+    margin-top: 5%;
+    img{
+      border-radius: 50%;
+      max-height: 30px;
+      margin-right: 10px;
+    }
+    p{
+      font-size: 0.7rem;
+    }
+
+  }
 }
 
 
