--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,11 @@ h2 {
   font-size: 1.2rem;
 }
 
+h3 {
+  font-family: Raleway;
+  font-size: 1rem;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -109,20 +114,20 @@ header a {
           align-items: flex-start;
 }
 
-.options-container {
+.options-block .options-container {
   width: 30%;
   min-width: 200px;
   margin: 20px;
 }
 
-.options-container img {
+.options-block .options-container img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   min-width: 15%;
 }
 
-.options-container p, .options-container h2 {
+.options-block .options-container p, .options-block .options-container h2 {
   text-align: center;
 }
 
@@ -156,6 +161,51 @@ header a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.testimonial-block {
+  max-width: 80%;
+  -ms-flex-pack: distribute !important;
+      justify-content: space-around !important;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+.testimonial-block .testimonial {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 25%;
+  background-color: #202a3c;
+  padding: 2%;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.testimonial-block .testimonial p {
+  margin: 0 auto;
+  margin-bottom: 5px;
+}
+
+.testimonial-block .testimonial h3 {
+  margin: 0;
+}
+
+.testimonial-block .testimonial-person {
+  -webkit-box-pack: left !important;
+      -ms-flex-pack: left !important;
+          justify-content: left !important;
+  margin-top: 5%;
+}
+
+.testimonial-block .testimonial-person img {
+  border-radius: 50%;
+  max-height: 30px;
+  margin-right: 10px;
+}
+
+.testimonial-block .testimonial-person p {
+  font-size: 0.7rem;
 }
 
 .flexbox-center {
