--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -110,6 +110,7 @@ header {
   justify-content: space-around !important;
   margin: 0 auto;
   margin-top: 5%;
+  margin-bottom: 5%;
 
   .testimonial {
     flex-wrap: wrap;
@@ -117,6 +118,7 @@ header {
     background-color: hsl(219, 30%, 18%);
     padding: 2%;
     justify-content: left;
+    border-radius: 2%;
 
     p{
       margin: 0 auto;
@@ -126,6 +128,7 @@ header {
       margin: 0;
     }
   }
+}
 
   .testimonial-person{
     justify-content: left !important;
@@ -138,8 +141,24 @@ header {
     p{
       font-size: 0.7rem;
     }
+  }
 
+footer{
+  background-color: hsl(216, 53%, 9%);
+  height: 300px;
+  border: 1px dotted white;
+
+.footer-block{
+  border: 1px solid pink;
+  margin: 15px;
+}
+  .footer-content{
+    border: 1px solid green;
+    justify-content: space-between !important;
+    align-items: flex-start;
+    width: 80%;
   }
 }
+
 
 
